@@ -1,11 +1,14 @@
 -----------------------------------------------------------------------------------------
-	$Id: ChangeLog,v 1.568 2009-07-07 21:47:54 guru Exp $
+	$Id: ChangeLog,v 1.569 2009-07-08 01:43:16 guru Exp $
 -----------------------------------------------------------------------------------------
 
 -----------------------------------------------------------------------------------------
 2009-07-10
 	* GMT 4.5.0 finalized and released
 -----------------------------------------------------------------------------------------
+2009-07-07	pwessel
+	* gmt_plot.c:		The polar cap on gridlines needed to be reversed for r-theta (polar) maps
+
 2009-07-07	remko
 	* gmt_support.c (GMT_RI_prepare):	Fixed bug: when x_inc in km, m, etc,
 				value was ignored (always 1).
